--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
+    <!--jjn,n,,nn,,nn,,n-->
+
     <link rel="manifest" href="manifest.json">
 
     <!-- un-comment this code to enable service worker
