--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <!--jjn,n,,nn,,nn,,n-->
+    <!---dfdvdfvdkvdkjvdfkjvbdjkvdjkbdjbjbk-->
 
     <link rel="manifest" href="manifest.json">
 
@@ -20,9 +20,9 @@
     <link href="lib/angular-drag-and-drop-directives/build/css/drag-and-drop.css">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/animaux.css" rel="stylesheet">
-    <link href="css/lettres.css" rel="stylesheet">
     <link href="css/chiffres.css" rel="stylesheet">
     <link href="css/accueil.css" rel="stylesheet">
+    <link href="css/lettres.css" rel="stylesheet">
 
    
 
@@ -56,6 +56,9 @@
   </head>
   <body ng-app="app">
     <ion-pane>
+    <audio id="essaie" ng-src="sons/essaie.wav" autostart="false" class=""></audio> 
+    <audio id="bien" ng-src="sons/bien.wav" autostart="false" class=""></audio> 
+    <audio id="bravo" ng-src="sons/bravo.wav" autostart="false" class=""></audio> 
         <ion-nav-view cache-view="false"></ion-nav-view>
     </ion-pane>
   </body>
