--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
     <!-- your app's js -->
 
     <script src="js/app.js"></script>
-
+    <script src="js/popupstart.factory.js"></script>
     <script src="js/accueil.controller.js"></script>
     <script src="js/animaux.controller.js"></script>
     <script src="js/animaux2.controller.js"></script>
